feat(i18n): add detail translations for clients and suppliers
- Add "detail" key translations in en, es and fr locales
- Update breadcrumb navigation to use new detail translations
- Improve company form view with better state management
- Fix company type and country field handling to use IDs

--- a/src/frontend/i18n/locales/es.json
+++ b/src/frontend/i18n/locales/es.json
@@ -94,6 +94,7 @@
     "edit": "Editar Cliente",
     "delete": "Eliminar Cliente",
     "view": "Ver Cliente",
+    "detail": "Detalles del Cliente",
     "no_clients": "No hay clientes registrados",
     "no_clients_message": "Comienza creando tu primer cliente",
     "create_first": "Crear Primer Cliente",
@@ -108,6 +109,7 @@
     "edit": "Editar Proveedor",
     "delete": "Eliminar Proveedor",
     "view": "Ver Proveedor",
+    "detail": "Detalles del Proveedor",
     "no_suppliers": "No hay proveedores registrados",
     "no_suppliers_message": "Comienza creando tu primer proveedor",
     "create_first": "Crear Primer Proveedor",
