--- a/src/frontend/i18n/locales/fr.json
+++ b/src/frontend/i18n/locales/fr.json
@@ -94,6 +94,7 @@
     "edit": "Modifier Client",
     "delete": "Supprimer Client",
     "view": "Voir Client",
+    "detail": "Détails du Client",
     "no_clients": "Aucun client enregistré",
     "no_clients_message": "Commencez par créer votre premier client",
     "create_first": "Créer Premier Client",
@@ -108,6 +109,7 @@
     "edit": "Modifier Fournisseur",
     "delete": "Supprimer Fournisseur",
     "view": "Voir Fournisseur",
+    "detail": "Détails du Fournisseur",
     "no_suppliers": "Aucun fournisseur enregistré",
     "no_suppliers_message": "Commencez par créer votre premier fournisseur",
     "create_first": "Créer Premier Fournisseur",
