--- a/src/frontend/i18n/locales/en.json
+++ b/src/frontend/i18n/locales/en.json
@@ -94,6 +94,7 @@
     "edit": "Edit Client",
     "delete": "Delete Client",
     "view": "View Client",
+    "detail": "Client Details",
     "no_clients": "No clients registered",
     "no_clients_message": "Start by creating your first client",
     "create_first": "Create First Client",
@@ -108,6 +109,7 @@
     "edit": "Edit Supplier",
     "delete": "Delete Supplier",
     "view": "View Supplier",
+    "detail": "Supplier Details",
     "no_suppliers": "No suppliers registered",
     "no_suppliers_message": "Start by creating your first supplier",
     "create_first": "Create First Supplier",
