feat(companies): add city field to company form and list view
- Add city_id field to company schema
- Implement city lookup API endpoint
- Replace email field with city in list view columns
- Add city dropdown to form with country-based filtering
- Update i18n translations for city field

--- a/src/frontend/i18n/locales/en.json
+++ b/src/frontend/i18n/locales/en.json
@@ -49,6 +49,7 @@
       "type": "Type",
       "phone": "Phone",
       "email": "Email",
+      "city": "City",
       "website": "Website",
       "country": "Country",
       "status": "Status",
