--- a/src/frontend/i18n/locales/fr.json
+++ b/src/frontend/i18n/locales/fr.json
@@ -49,6 +49,7 @@
       "type": "Type",
       "phone": "Téléphone",
       "email": "Email",
+      "city": "Ville",
       "website": "Site Web",
       "country": "Pays",
       "status": "Statut",
