feat(forms): add address and contact form dialogs with validation
refactor(products): split products into articles and nomenclatures views
update navigation, routes and i18n for new structure

test(forms): add simple dialog test script for native controls

--- a/src/frontend/i18n/locales/es.json
+++ b/src/frontend/i18n/locales/es.json
@@ -116,26 +116,24 @@
     "create_first": "Crear Primer Proveedor",
     "search_placeholder": "Buscar proveedores por nombre, trigrama..."
   },
-  "products": {
-    "title": "Productos",
-    "description": "Gestión de productos y nomenclaturas",
-    "list_title": "Lista de Productos",
-    "create": "Crear Producto",
-    "create_new": "Nuevo Producto",
-    "edit": "Editar Producto",
-    "delete": "Eliminar Producto",
-    "view": "Ver Producto",
-    "no_products": "No hay productos registrados",
-    "no_products_message": "Comienza creando tu primer producto",
-    "create_first": "Crear Primer Producto",
-    "search_placeholder": "Buscar productos por código, nombre...",
-    "bom": "Lista de Materiales (BOM)",
-    "add_component": "Agregar Componente",
+  "articles": {
+    "title": "Artículos",
+    "description": "Gestión de artículos",
+    "list_title": "Lista de Artículos",
+    "create": "Crear Artículo",
+    "create_new": "Nuevo Artículo",
+    "edit": "Editar Artículo",
+    "delete": "Eliminar Artículo",
+    "view": "Ver Artículo",
+    "detail": "Detalles del Artículo",
+    "no_articles": "No hay artículos registrados",
+    "no_articles_message": "Comienza creando tu primer artículo",
+    "create_first": "Crear Primer Artículo",
+    "search_placeholder": "Buscar artículos por código, nombre...",
     "columns": {
       "id": "ID",
       "code": "Código",
       "name": "Nombre",
-      "type": "Tipo",
       "unit": "Unidad",
       "cost": "Costo",
       "description": "Descripción",
@@ -143,32 +141,72 @@
       "created_at": "Fecha Creación",
       "actions": "Acciones"
     },
-    "types": {
-      "article": "Artículo",
-      "nomenclature": "Nomenclatura"
-    },
     "filters": {
       "all": "Todos",
       "active": "Activos",
       "inactive": "Inactivos",
-      "article": "Artículos",
-      "nomenclature": "Nomenclaturas",
       "status": "Estado",
-      "type": "Tipo"
+      "article": "Artículos",
+      "nomenclature": "Nomenclaturas"
+    },
+    "form": {
+      "basic_info": "Información Básica",
+      "code": "Código",
+      "code_hint": "Código único del artículo",
+      "name": "Nombre",
+      "name_hint": "Nombre descriptivo",
+      "description": "Descripción",
+      "description_hint": "Descripción detallada",
+      "unit": "Unidad de Medida",
+      "cost": "Costo",
+      "cost_hint": "0.00",
+      "is_active": "Activo"
+    }
+  },
+  "nomenclatures": {
+    "title": "Nomenclaturas",
+    "description": "Gestión de nomenclaturas (BOM)",
+    "list_title": "Lista de Nomenclaturas",
+    "create": "Crear Nomenclatura",
+    "create_new": "Nueva Nomenclatura",
+    "edit": "Editar Nomenclatura",
+    "delete": "Eliminar Nomenclatura",
+    "view": "Ver Nomenclatura",
+    "detail": "Detalles de la Nomenclatura",
+    "no_nomenclatures": "No hay nomenclaturas registradas",
+    "no_nomenclatures_message": "Comienza creando tu primera nomenclatura",
+    "create_first": "Crear Primera Nomenclatura",
+    "search_placeholder": "Buscar nomenclaturas por código, nombre...",
+    "bom": "Lista de Materiales (BOM)",
+    "add_component": "Agregar Componente",
+    "columns": {
+      "id": "ID",
+      "code": "Código",
+      "name": "Nombre",
+      "unit": "Unidad",
+      "components": "Componentes",
+      "status": "Estado",
+      "created_at": "Fecha Creación",
+      "actions": "Acciones"
+    },
+    "filters": {
+      "all": "Todas",
+      "active": "Activas",
+      "inactive": "Inactivas",
+      "status": "Estado",
+      "article": "Artículos",
+      "nomenclature": "Nomenclaturas"
     },
     "form": {
       "basic_info": "Información Básica",
       "bom_info": "Lista de Materiales",
       "code": "Código",
-      "code_hint": "Código único del producto",
+      "code_hint": "Código único de la nomenclatura",
       "name": "Nombre",
       "name_hint": "Nombre descriptivo",
       "description": "Descripción",
       "description_hint": "Descripción detallada",
-      "type": "Tipo de Producto",
       "unit": "Unidad de Medida",
-      "cost": "Costo",
-      "cost_hint": "0.00",
       "is_active": "Activo"
     }
   },
@@ -298,7 +336,8 @@
     "companies": "Empresas",
     "clients": "Clientes",
     "suppliers": "Proveedores",
-    "products": "Productos",
+    "articles": "Artículos",
+    "nomenclatures": "Nomenclaturas",
     "quotes": "Cotizaciones",
     "orders": "Órdenes",
     "deliveries": "Entregas",
