feat(i18n): add product detail translations and improve navigation
- Add Spanish translations for product detail view labels
- Modify product detail navigation to support different view modes
- Add new lookup API methods for family types and matters
- Update product detail view to use translations consistently

--- a/src/frontend/i18n/locales/es.json
+++ b/src/frontend/i18n/locales/es.json
@@ -235,6 +235,14 @@
       "is_active": "Activo"
     }
   },
+  "product_detail": {
+    "revision": "Revisión",
+    "purchase_price": "Precio Compra",
+    "sale_price_eur": "Precio Venta EUR",
+    "margin_percentage": "Margen %",
+    "stock_location": "Ubicación",
+    "total_cost": "Costo Total"
+  },
   "quotes": {
     "title": "Cotizaciones",
     "description": "Gestión de cotizaciones",
