docs(i18n): add missing spanish translation keys for nomenclature titles
Add translation keys for create and edit nomenclature page titles to improve consistency in the Spanish locale.

--- a/src/frontend/i18n/locales/es.json
+++ b/src/frontend/i18n/locales/es.json
@@ -194,7 +194,9 @@
     "list_title": "Lista de Nomenclaturas",
     "create": "Crear Nomenclatura",
     "create_new": "Nueva Nomenclatura",
+    "create_title": "Crear Nomenclatura",
     "edit": "Editar Nomenclatura",
+    "edit_title": "Editar Nomenclatura",
     "delete": "Eliminar Nomenclatura",
     "view": "Ver Nomenclatura",
     "detail": "Detalles de la Nomenclatura",
