feat(i18n): add new spanish translations for bom components
Add translations for BOM component management including article selection, search hints, and quantity validation

--- a/src/frontend/i18n/locales/es.json
+++ b/src/frontend/i18n/locales/es.json
@@ -163,6 +163,11 @@
       "bom_section": "Lista de Materiales (BOM)",
       "bom_placeholder": "Componentes del producto...",
       "add_component": "Agregar Componente",
+      "select_article": "Seleccionar Artículo",
+      "search_articles_hint": "Buscar por código o nombre...",
+      "no_articles_found": "No se encontraron artículos",
+      "quantity": "Cantidad",
+      "invalid_quantity": "La cantidad debe ser un número positivo",
       "code": "Código",
       "code_hint": "Código único del artículo",
       "name": "Nombre",
@@ -296,6 +301,8 @@
     "edit": "Editar",
     "view": "Ver",
     "create": "Crear",
+    "add": "Agregar",
+    "remove": "Eliminar",
     "search": "Buscar",
     "filter": "Filtrar",
     "filters": "Filtros",
