``` feat(views): add article and nomenclature management views with detail and form components
Add comprehensive view structure for articles and nomenclatures including list, form, and detail views. Add Spanish translations for BOM component fields (quantity, unit_cost, total_cost, cost) and no_components message. Export new view classes (ArticleListView, ArticleFormView, ArticleDetailView, NomenclatureListView, NomenclatureFormView, NomenclatureDetailView) from views module. Implement ArticleDetail

--- a/src/frontend/i18n/locales/es.json
+++ b/src/frontend/i18n/locales/es.json
@@ -217,10 +217,15 @@
       "name": "Nombre",
       "unit": "Unidad",
       "components": "Componentes",
+      "quantity": "Cantidad",
+      "unit_cost": "Costo Unit.",
+      "total_cost": "Costo Total",
+      "cost": "Costo",
       "status": "Estado",
       "created_at": "Fecha Creación",
       "actions": "Acciones"
     },
+    "no_components": "No hay componentes en esta nomenclatura",
     "filters": {
       "all": "Todas",
       "active": "Activas",
